Update to board members 2022-23

--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Financial Officer</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/senem.jpg')%>" alt="Photograph of Ashna
+              src="<%=require('./images/ashna.jpg')%>" alt="Photograph of Ashna
               Khetan">
               <p class="pb_font-15 mt-3 mb-0">Ashna Khetan</p>
               <p class="pb_font-15"><a href="mailto:senemi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -318,10 +318,13 @@
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>Social Chair</h4>
 							<img class="img-fluid rounded-circle"
-              src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Monica
+              src="<%=require('./images/monica.jpg')%>" alt="Photograph of Monica
               Hicks">
 							<p class="pb_font-15 mt-3 mb-0">Monica Hicks</p>
-                          <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                          <p class="pb_font-15"><a
+                            href="mailto:Mdhicks@stanford.edu"><i class="fa
+                              fa-envelope"></i></a> | <a
+                                                          href="https://www.linkedin.com/in/monica-d-hicks/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
 					</div>
 				</div>
@@ -333,7 +336,9 @@
               src="<%=require('./images/adam.jpg')%>" alt="Photograph of Adam
               Sun">
               <p class="pb_font-15 mt-3 mb-0">Adam Sun</p>
-              <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-radovan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:adsun@stanford.edu"><i
+                  class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/adam-sun/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 	  <div class="col-sm-6 col-md-3">
@@ -367,10 +372,12 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Fellowships</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/jessica.jpg')%>" alt="Photograph of
+              src="<%=require('./images/sherry.jpg')%>" alt="Photograph of
               Sherry Xie">
               <p class="pb_font-15 mt-3 mb-0">Sherry Xie</p>
-              <p class="pb_font-15"><a href="mailto:jmyu@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jessica-m-yu" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:ycxie@stanford.edu"><i
+                  class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/yichen-sherry-xie/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -393,10 +400,12 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education</br> Outreach</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/anna.jpg')%>" alt="Photograph of Monica
+              src="<%=require('./images/monica.jpg')%>" alt="Photograph of Monica
               Hicks">
               <p class="pb_font-15 mt-3 mb-0">Monica Hicks</p>
-              <p class="pb_font-15"><a href="mailto:afhudson@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/anna-hudson-5134061a6/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:Mdhicks@stanford.edu"><i
+                  class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/monica-d-hicks/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -408,8 +417,8 @@
                   src="<%=require('./images/philip.jpg')%>" alt="Photograph of
                   Philip Baillargeon">
                   <p class="pb_font-15 mt-3 mb-0">Philip Baillargeon</p>
-                  <p class="pb_font-15"><a href="mailto:kharold@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kaitlinharold" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-              </div>
+                  <p class="pb_font-15"><a href="mailto:pabaill@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/philip-baillargeon-b1258a227/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
           </div>
           <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
