Added application link

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,9 @@
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
 <!--                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>-->
-<!--                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>-->
+                            <p> <a href="http://bit.ly/cssg2223" target="_blank"
+                              id="apply-link"> 🆕 Apply to join the CS+Social
+                              Good Team! </a> </p>
                             <p class="mb-4"><a href="https://bit.ly/38viSk7" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
@@ -587,7 +589,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <p class="pb_font-14">&copy; 2021 CS+Social Good.</p>
+            <p class="pb_font-14">&copy; 2022 CS+Social Good.</p>
           </div>
         </div>
       </div>
