Ananya pic update

--- a/src/index.html
+++ b/src/index.html
@@ -305,7 +305,7 @@
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>President</h4>
                             <img class="img-fluid rounded-circle"
-                            src="<%=require('./images/ananya.jpg')%>"
+                            src="<%=require('./images/ananya2.jpg')%>"
                             alt="Photograph of Ananya Karthik">
                             <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
                           <p class="pb_font-15"><a
