--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
 <!--                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>-->
-                            <p> <a href="http://bit.ly/cssg2223" target="_blank"
+                          <!--  <p> <a href="http://bit.ly/cssg2223" target="_blank"
                               id="apply-link"> 🆕 Apply to join the CS+Social
-                              Good Team! </a> </p>
+                              Good Team! </a> </p> -->
                             <p class="mb-4"><a href="https://bit.ly/38viSk7" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
@@ -404,7 +404,7 @@
               <h4 class="mb-3"></br>CS106S</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/matthewe.jpg')%>" alt="Photograph of Matthew Early">
               <p class="pb_font-15 mt-3 mb-0">Matthew Early</p>
-              <p class="pb_font-15"><a href="mailto:mmearly@stanford.edu"><i class="fa fa-envelope"></i></a></p>
+	      <p class="pb_font-15"><a href="mailto:mmearly@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-e-578726168/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
