board profiles, years, email addresses, fellowship application

--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,8 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">Fellowships</h3>
                     <p class="text-sans-serif pb_font-16">In partnership with the Haas Center, we provide fellows stipends to work on social ventures all across the world.</p>
-                    <p class="text-sans-serif pb_font-16"> <a href="https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021" target="_blank"> <u>🆕 Apply for a CS+SG fellowship!</u> </a> </p>
+                    <!-- <p class="text-sans-serif pb_font-16"> <a href="https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021" target="_blank"> <u>🆕 Apply for a CS+SG fellowship!</u> </a> </p> -->
+                    <p class="text-sans-serif pb_font-16"> <u>Applications will open be posted here when open!</u> </a> </p>
                   </div>
                 </div>
 
@@ -266,7 +267,7 @@
                 <div class="quote-right">&rdquo;</div>
                 <blockquote class="mb-5">Last spring, I was debating between the CS+Social Good Fellowship and a big tech company program. I have absolutely no regrets about taking the fellowship: I got to see the direct impact of my work and I got to know a group of incredible, inspiring people.</blockquote>
                 <h3 class="heading">Claire Huang</h3>
-                <span class="subheading">2017 CS+Social Good Summer Fellow</span>
+                <span class="subheading">CS+Social Good Summer Fellow</span>
               </div>
             </div>
             <!-- END sync_v1 -->
@@ -305,12 +306,12 @@
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>President</h4>
                             <img class="img-fluid rounded-circle"
-                            src="<%=require('./images/ananya2.jpg')%>"
-                            alt="Photograph of Ananya Karthik">
-                            <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
+                            src="<%=require('./images/ashna23.jpg')%>"
+                            alt="Photograph of Ashna Khetan">
+                            <p class="pb_font-15 mt-3 mb-0">Ashna Khetan</p>
                           <p class="pb_font-15"><a
-                            href="mailto:ananya23@stanford.edu"><i class="fa
-                              fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                            href="mailto:ashnak@stanford.edu"><i class="fa
+                              fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ashna-khetan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
           <div class="col-sm-6 col-md-3">
@@ -319,8 +320,8 @@
               <img class="img-fluid rounded-circle"
               src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Mona
               anvari">
-              <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
-              <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15 mt-3 mb-0">June Lee</p>
+              <p class="pb_font-15"><a href="mailto:junelee1@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -329,19 +330,19 @@
               <img class="img-fluid rounded-circle"
               src="<%=require('./images/ashna.jpg')%>" alt="Photograph of Ashna
               Khetan">
-              <p class="pb_font-15 mt-3 mb-0">Ashna Khetan</p>
-              <p class="pb_font-15"><a href="mailto:senemi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15 mt-3 mb-0">Gabe Magaña</p>
+              <p class="pb_font-15"><a href="mailto:gdmagana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Social Chair</h4>
+							<h4 class="mb-3"></br>Social Chair \& Education Outreach</h4>
 							<img class="img-fluid rounded-circle"
               src="<%=require('./images/monica.jpg')%>" alt="Photograph of Monica
               Hicks">
-							<p class="pb_font-15 mt-3 mb-0">Monica Hicks</p>
+							<p class="pb_font-15 mt-3 mb-0">Winson Cheng</p>
                           <p class="pb_font-15"><a
-                            href="mailto:Mdhicks@stanford.edu"><i class="fa
+                            href="mailto:winsonc@stanford.edu"><i class="fa
                               fa-envelope"></i></a> | <a
                                                           href="https://www.linkedin.com/in/monica-d-hicks/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
@@ -352,12 +353,12 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/adam.jpg')%>" alt="Photograph of Adam
+              src="<%=require('./images/adam23.jpeg')%>" alt="Photograph of Adam
               Sun">
               <p class="pb_font-15 mt-3 mb-0">Adam Sun</p>
               <p class="pb_font-15"><a href="mailto:adsun@stanford.edu"><i
                   class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/adam-sun/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                href="https://adamsunn.github.io/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 	  <div class="col-sm-6 col-md-3">
@@ -371,18 +372,18 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/yousif.jpg')%>" alt="Photograph of Yousif Mohsen">
-              <p class="pb_font-15 mt-3 mb-0">Yousif Mohsen</p>
-              <p class="pb_font-15"><a href="mailto:yousifm@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/yousif-mohsen-7020411a5" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/deepan.JPG')%>" alt="Photograph of Deepan Shah">
+              <p class="pb_font-15 mt-3 mb-0">Deepan Shah</p>
+              <p class="pb_font-15"><a href="mailto:deepans@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/deepan-shah/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/liz2.jpg')%>" alt="Photograph of Liz Song">
-              <p class="pb_font-15 mt-3 mb-0">Liz Song</p>
-              <p class="pb_font-15"><a href="mailto:lizsong@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/liz-song-0620811b0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              src="<%=require('./images/liz2.jpg')%>" alt="Photograph of Steve Dou">
+              <p class="pb_font-15 mt-3 mb-0">Steve Dou</p>
+              <p class="pb_font-15"><a href="mailto:stevedou@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/liz-song-0620811b0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -402,20 +403,20 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>CS106S</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/matthewe.jpg')%>" alt="Photograph of Matthew Early">
-              <p class="pb_font-15 mt-3 mb-0">Matthew Early</p>
-	      <p class="pb_font-15"><a href="mailto:mmearly@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-e-578726168/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/ben23.png')%>" alt="Photograph of Ben Yan">
+              <p class="pb_font-15 mt-3 mb-0">Ben Yan</p>
+	      <p class="pb_font-15"><a href="mailto:bbyan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/benjaminbyan/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>CS106S</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/miles.jpg')%>" alt="Photograph of Miles McCain">
               <p class="pb_font-15 mt-3 mb-0">Miles McCain</p>
               <p class="pb_font-15"><a href="mailto:mccain@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/r-miles-mccain-a215b1199/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
             </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
+          </div> -->
+          <!-- <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education</br> Outreach</h4>
               <img class="img-fluid rounded-circle"
@@ -426,10 +427,10 @@
                   class="fa fa-envelope"></i></a> | <a
                 href="https://www.linkedin.com/in/monica-d-hicks/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="row">
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
                   <h4 class="mb-3">Impact<br/>Lab</h4>
                   <img class="img-fluid rounded-circle"
@@ -438,29 +439,45 @@
                   <p class="pb_font-15 mt-3 mb-0">Philip Baillargeon</p>
                   <p class="pb_font-15"><a href="mailto:pabaill@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/philip-baillargeon-b1258a227/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
+          </div> -->
+          <!-- <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
                   <h4 class="mb-3">Impact<br/>Lab</h4>
                   <img class="img-fluid rounded-circle" src="<%=require('./images/chris.jpg')%>" alt="Photograph of Chris Pondoc">
                   <p class="pb_font-15 mt-3 mb-0">Chris Pondoc</p>
                   <p class="pb_font-15"><a href="mailto:clpondoc@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/pondoc/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
               </div>
+          </div> -->
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Design &amp; Marketing</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/sarah23.jpg')%>" alt="Photograph of Sarah Dong">
+              <p class="pb_font-15 mt-3 mb-0">Frank Zhao</p>
+              <p class="pb_font-15"><a href="mailto:sarahjd@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="www.linkedin.com/in/sarah-dong-0882641a4" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Design &amp; Marketing</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/frank.jpg')%>" alt="Photograph of Frank Zhao">
-              <p class="pb_font-15 mt-3 mb-0">Frank Zhao</p>
-              <p class="pb_font-15"><a href="mailto:frankz24@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/frankzhao01/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/dalynn23.jpeg')%>" alt="Photograph of Dalynn Miller">
+              <p class="pb_font-15 mt-3 mb-0">Dalynn Miller</p>
+              <p class="pb_font-15"><a href="mailto:dalynn@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/dalynn-miller-849266179" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Studio</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>" alt="Photograph of Alissa Vuillier">
-              <p class="pb_font-15 mt-3 mb-0">Alissa Vuillier</p>
-              <p class="pb_font-15"><a href="mailto:alissav@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>" alt="Photograph of Anusheh Chaudry">
+              <p class="pb_font-15 mt-3 mb-0">Anusheh Chaudry</p>
+              <p class="pb_font-15"><a href="mailto:anusheh@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Studio</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>" alt="Photograph of Sarah Barragan">
+              <p class="pb_font-15 mt-3 mb-0">Sarah Barragan</p>
+              <p class="pb_font-15"><a href="mailto:sabarrag@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -501,7 +518,7 @@
                 <div id="pb_faq3" class="collapse" role="tabpanel">
                   <div class="py-3">
                     <p>There are a variety of ways to get involved in CS+Social Good. You can enroll in our classes (which may be application-based, depending on the class), attend our speaker and mixer events, sign up for our newsletter, and apply for one of our fellowships.</p>
-                    <p>If you'd like to be part of our leadership team, we accept applications to join our team every fall.</p>
+                    <p>If you'd like to be part of our core team, we accept applications to join our team every fall.</p>
                   </div>
                 </div>
               </div>
@@ -531,7 +548,7 @@
                 <div id="pb_faq6" class="collapse" role="tabpanel">
                   <div class="py-3">
                     <p>To publicize an event or opportunity to our mailing list, please send an email with the relevant information to <a href="mailto:cs-for-social-good@lists.stanford.edu">cs-for-social-good@lists.stanford.edu</a> and we will put it in our next weekly newsletter. If the opportunity is time-sensitive, please forward it to us at least a week in advance.</p>
-                    <p>If you would like to contact us for any other reason, please email <a href="mailto:cs4good@cs.stanford.edu">cs4good@cs.stanford.edu</a>. If you have specific questions about a particular subteam, please feel free to email the relevant board member (see Team section).</p>
+                    <p>If you would like to contact us for any other reason, please email <a href="mailto:stanfordcs4good@gmail.com">stanfordcs4good@gmail.com</a>. If you have specific questions about a particular subteam, please feel free to email the relevant board member (see Team section).</p>
                   </div>
                 </div>
               </div>
@@ -583,7 +600,7 @@
               <li class="list-inline-item"><a href="https://twitter.com/cs4good" target="_blank" class="p-2"><i class="fa fa-twitter"></i></a></li>
               <li class="list-inline-item"><a href="https://www.linkedin.com/company/cs-social-good/" target="_blank" class="p-2"><i class="fa fa-linkedin"></i></a></li>
               <li class="list-inline-item"><a href="https://medium.com/cs-social-good" target="_blank" class="p-2"><i class="fa fa-medium"></i></a></li>
-              <li class="list-inline-item"><a href="mailto:cs4good@cs.stanford.edu" class="p-2"><i class="fa fa-envelope"></i></a></li>
+              <li class="list-inline-item"><a href="mailto:stanfordcs4good@gmail.com" class="p-2"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
