--- a/src/200.html
+++ b/src/200.html
@@ -252,7 +252,7 @@
                 <div class="quote-right">&rdquo;</div>
                 <blockquote class="mb-5">Last spring, I was debating between the CS+Social Good Fellowship and a big tech company program. I have absolutely no regrets about taking the fellowship: I got to see the direct impact of my work and I got to know a group of incredible, inspiring people.</blockquote>
                 <h3 class="heading">Claire Huang</h3>
-                <span class="subheading">2017 CS+Social Good Summer Fellow</span>
+                <span class="subheading">CS+Social Good Summer Fellow</span>
               </div>
             </div>
             <!-- END sync_v1 -->
@@ -475,7 +475,7 @@
                 <div id="pb_faq6" class="collapse" role="tabpanel">
                   <div class="py-3">
                     <p>To publicize an event or opportunity to our mailing list, please send an email with the relevant information to <a href="mailto:cs-for-social-good@lists.stanford.edu">cs-for-social-good@lists.stanford.edu</a> and we will put it in our next weekly newsletter. If the opportunity is time-sensitive, please forward it to us at least a week in advance.</p>
-                    <p>If you would like to contact us for any other reason, please email <a href="mailto:cs4good@cs.stanford.edu">cs4good@cs.stanford.edu</a>. If you have specific questions about a particular subteam, please feel free to email the relevant board member (see Team section).</p>
+                    <p>If you would like to contact us for any other reason, please email <a href="mailto:stanfordcs4good@gmail.com">stanfordcs4good@gmail.com</a>. If you have specific questions about a particular subteam, please feel free to email the relevant board member (see Team section).</p>
                   </div>
                 </div>
               </div>
@@ -527,7 +527,7 @@
               <li class="list-inline-item"><a href="https://twitter.com/cs4good" target="_blank" class="p-2"><i class="fa fa-twitter"></i></a></li>
               <li class="list-inline-item"><a href="https://www.linkedin.com/company/cs-social-good/" target="_blank" class="p-2"><i class="fa fa-linkedin"></i></a></li>
               <li class="list-inline-item"><a href="https://medium.com/cs-social-good" target="_blank" class="p-2"><i class="fa fa-medium"></i></a></li>
-              <li class="list-inline-item"><a href="mailto:cs4good@cs.stanford.edu" class="p-2"><i class="fa fa-envelope"></i></a></li>
+              <li class="list-inline-item"><a href="mailto:stanfordcs4good@gmail.com" class="p-2"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
