--- a/src/index.html
+++ b/src/index.html
@@ -338,13 +338,12 @@
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>Social Chair \& Education Outreach</h4>
 							<img class="img-fluid rounded-circle"
-              src="<%=require('./images/monica.jpg')%>" alt="Photograph of Monica
-              Hicks">
+              src="<%=require('./images/winson23.png')%>" alt="Photograph of Winson Cheng">
 							<p class="pb_font-15 mt-3 mb-0">Winson Cheng</p>
                           <p class="pb_font-15"><a
                             href="mailto:winsonc@stanford.edu"><i class="fa
                               fa-envelope"></i></a> | <a
-                                                          href="https://www.linkedin.com/in/monica-d-hicks/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                                                          href="https://www.linkedin.com/in/chengwinson/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
 					</div>
 				</div>
@@ -452,7 +451,7 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Design &amp; Marketing</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/sarah23.jpg')%>" alt="Photograph of Sarah Dong">
-              <p class="pb_font-15 mt-3 mb-0">Frank Zhao</p>
+              <p class="pb_font-15 mt-3 mb-0">Sarah Dong</p>
               <p class="pb_font-15"><a href="mailto:sarahjd@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="www.linkedin.com/in/sarah-dong-0882641a4" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
