converted images to png

--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,6 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">Fellowships</h3>
                     <p class="text-sans-serif pb_font-16">In partnership with the Haas Center, we provide fellows stipends to work on social ventures all across the world.</p>
-                    <!-- <p class="text-sans-serif pb_font-16"> <a href="https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021" target="_blank"> <u>🆕 Apply for a CS+SG fellowship!</u> </a> </p> -->
                     <p class="text-sans-serif pb_font-16"> <u>Applications will open be posted here when open!</u> </a> </p>
                   </div>
                 </div>
@@ -352,7 +351,7 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/adam23.jpeg')%>" alt="Photograph of Adam
+              src="<%=require('./images/adam23.png')%>" alt="Photograph of Adam
               Sun">
               <p class="pb_font-15 mt-3 mb-0">Adam Sun</p>
               <p class="pb_font-15"><a href="mailto:adsun@stanford.edu"><i
@@ -371,7 +370,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/deepan.JPG')%>" alt="Photograph of Deepan Shah">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/deepan.png')%>" alt="Photograph of Deepan Shah">
               <p class="pb_font-15 mt-3 mb-0">Deepan Shah</p>
               <p class="pb_font-15"><a href="mailto:deepans@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/deepan-shah/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -458,7 +457,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Design &amp; Marketing</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/dalynn23.jpeg')%>" alt="Photograph of Dalynn Miller">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/dalynn23.png')%>" alt="Photograph of Dalynn Miller">
               <p class="pb_font-15 mt-3 mb-0">Dalynn Miller</p>
               <p class="pb_font-15"><a href="mailto:dalynn@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/dalynn-miller-849266179" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
