--- a/src/index.html
+++ b/src/index.html
@@ -317,10 +317,9 @@
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
               <img class="img-fluid rounded-circle"
-              src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Mona
-              anvari">
+              src="<%=require('./images/june23.png')%>" alt="Photograph of June Lee">
               <p class="pb_font-15 mt-3 mb-0">June Lee</p>
-              <p class="pb_font-15"><a href="mailto:junelee1@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:junelee1@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/junelee619/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
