--- a/src/index.html
+++ b/src/index.html
@@ -552,8 +552,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3">Design &amp; Marketing</h4>
@@ -575,6 +573,8 @@
                   class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Studio</h4>
@@ -595,6 +595,26 @@
             <p class="pb_font-15"><a href="mailto:sabarrag@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
                 href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i
                   class="fa fa-linkedin"></i></a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3"></br>Impact Lab</h4>
+            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/square23/josh23.png')%>"
+              alt="Photograph of Josh Delgadillo"> -->
+            <p class="pb_font-15 mt-3 mb-0">Anna Yang</p>
+            <p class="pb_font-15"><a href="mailto:joshdelg@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/joshdelg/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3"></br>Webmaster</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/josh23.png')%>"
+              alt="Photograph of Josh Delgadillo">
+            <p class="pb_font-15 mt-3 mb-0">Josh Delgadillo</p>
+            <p class="pb_font-15"><a href="mailto:joshdelg@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/joshdelg/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
       </div>
