Updated profiles for Steve, Anusheh, and Anna. Added more information for Impact Lab

--- a/src/index.html
+++ b/src/index.html
@@ -285,9 +285,16 @@
                 <div class="pb_icon d-flex mr-3 align-self-start pb_w-15"><i
                     class="ion-ios-flask-outline pb_icon-gradient"></i></div>
                 <div class="media-body">
-                  <h3 class="mt-2 mb-2 heading">Lab</h3>
-                  <p class="text-sans-serif pb_font-16">We're in the process of creating a permanent space where
-                    students can work on multi-year projects that create sustainable impact.</p>
+                  <h3 class="mt-2 mb-2 heading">Impact Lab</h3>
+                  <p class="text-sans-serif pb_font-16">We build a community of undergraduates conducting
+                    socially-impactful
+                    research by connecting students to 2-quarter projects.
+                    <u>Check back next fall for our application.</u>
+                  </p>
+                  <p class="text-sans-serif pb_font-16"><a
+                      href="https://docs.google.com/document/d/10T7OMhIo97n0nooGJjHjf6MJyB6YLT5FnQAcEIjb19g/edit?usp=sharing"
+                      target="_blank"><u>This
+                        year's labs</u></a></p>
                 </div>
               </div>
             </div>
@@ -521,11 +528,11 @@
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Discussions</h4>
-            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/liz2.jpg')%>" alt="Photograph of Steve Dou"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/steve23.png')%>"
+              alt="Photograph of Steve Dou">
             <p class="pb_font-15 mt-3 mb-0">Steve Dou</p>
             <p class="pb_font-15"><a href="mailto:stevedou@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/liz-song-0620811b0/" target="_blank"><i
-                  class="fa fa-linkedin"></i></a></p>
+                href="https://www.linkedin.com/in/steve-dou" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
       </div>
@@ -578,12 +585,11 @@
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Studio</h4>
-            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>"
-              alt="Photograph of Anusheh Chaudry"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/anusheh23.png')%>"
+              alt="Photograph of Anusheh Chaudry">
             <p class="pb_font-15 mt-3 mb-0">Anusheh Chaudry</p>
             <p class="pb_font-15"><a href="mailto:anusheh@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i
-                  class="fa fa-linkedin"></i></a></p>
+                href="https://www.linkedin.com/in/anushehchaudry" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
@@ -600,11 +606,11 @@
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Impact Lab</h4>
-            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/square23/josh23.png')%>"
-              alt="Photograph of Josh Delgadillo"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/anna23.png')%>"
+              alt="Photograph of Anna Yang">
             <p class="pb_font-15 mt-3 mb-0">Anna Yang</p>
-            <p class="pb_font-15"><a href="mailto:joshdelg@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/joshdelg/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <p class="pb_font-15"><a href="mailto:ajyang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/annajyang/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
