Put logo for empty headshots, upated IMpact Lab Lead profile

--- a/src/index.html
+++ b/src/index.html
@@ -475,10 +475,10 @@
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3">Financial Officer</h4>
-            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/square23/ashna23.png')%>" alt="Photograph of Ashna Khetan"> -->
-            <p class="pb_font-15 mt-3 mb-0">Gabe Magaña</p>
-            <p class="pb_font-15"><a href="mailto:gdmagana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>" alt="Photograph of Hayden Thompson">
+            <p class="pb_font-15 mt-3 mb-0">Hayden Thompson</p>
+            <!-- <p class="pb_font-15"><a href="mailto:gdmagana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p> -->
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
@@ -595,22 +595,22 @@
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Studio</h4>
-            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>"
-              alt="Photograph of Sarah Barragan"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>"
+              alt="Photograph of Sarah Barragan">
             <p class="pb_font-15 mt-3 mb-0">Sarah Barragan</p>
             <p class="pb_font-15"><a href="mailto:sabarrag@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i
+                href="https://www.linkedin.com/in/sarah-barragan-980b6b228/" target="_blank"><i
                   class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Impact Lab</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/anna23.png')%>"
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/annie23.png')%>"
               alt="Photograph of Anna Yang">
-            <p class="pb_font-15 mt-3 mb-0">Anna Yang</p>
-            <p class="pb_font-15"><a href="mailto:ajyang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/annajyang/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <p class="pb_font-15 mt-3 mb-0">Annie Lee</p>
+            <p class="pb_font-15"><a href="mailto:annieee@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="http://linkedin.com/in/annie-lee-53a898280" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
